--- a/links/about_me.html
+++ b/links/about_me.html
@@ -30,7 +30,7 @@
       <p>Hello, I am Anuj Magar. I am from Nisi-6 Baglung. I was born in Sirmour, Himachal Pradesh, India and my family returned back to Nepal later. <br> 
          I did my primary education in India, at Rajkeeya Prathmik Pathshala, Dingree Dhinnee. Then we moved to Nepal and there I did DLE in Shree Janakalyan Lower Secondary School. Later, I moved to Shree Gyanendra High School to complete SLC. After that, I arrived to Kathmandu for higher studies. I studied Computer Science in REHDON. My curiosity in technology and computer devices made me choose BSc. IT in University of Northampton.   <br>
          I took my basic and diploma course in computer when I studied in grade 9, as my school didnot provide that. After I did my HSEB bord exam, I took IT training course. <br>
-         Being a web developer is amazing. A web developer can spread knowledge and skills by fastest mean of communication. Almost everyone is nowadays relied on internet. There is no question that this trend of internet will go much higher in the future. I think, learning developer languages (soding) will secure my future. </p>
+         Being a web developer is amazing. A web developer can spread knowledge and skills by fastest mean of communication. Almost everyone is nowadays relied on internet. There is no question that this trend of internet will go much higher in the future. I think, learning developer languages (coding) will secure my future. </p>
    </div>
 </div> 
 
