--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
    <title>Anuj--Project</title>
    <link rel="stylesheet" type="text/css" href="css/main.css">
    <link rel="stylesheet" type="text/css" href="css/h&f.css">
-   <link rel="stylesheet" href="https://d1azc1qln24ryf.cloudfront.net/114779/Socicon/style-cf.css?u8vidh">
    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
    <meta name="viewport" content="width=device-width, initial-scale: 1.0">
 </head>
@@ -45,12 +44,12 @@
                                                                          <!-- end of landing-content --> 
       <div class="social">
       <ul>        
-         <li><a href="#"><i class="socicon-github"></i></a></li>
+         <li><a href="#"><i class="fa fa-github"></i></a></li>
          
-         <li><a href="https://www.linkedin.com/in/anujbm/"><i class="socicon-linkedin"></i></a></li>
-         <li><a href="https://www.twitter.com/anujbm"><i class="socicon-twitter"></i></a></li>
-         <li><a href="https://www.facebook.com/anujbm.roshan"><i class="socicon-facebook"></i></a></li>
-         <li><a href="https://plus.google.com/u/1/112428928728617303666"><i class="socicon-googleplus"></i></a></li>
+         <li><a href="https://www.linkedin.com/in/anujbm/"><i class="fa fa-linkedin"></i></a></li>
+         <li><a href="https://www.twitter.com/anujbm"><i class="fa fa-twitter"></i></a></li>
+         <li><a href="https://www.facebook.com/anujbm.roshan"><i class="fa fa-facebook"></i></a></li>
+         <li><a href="https://plus.google.com/u/1/112428928728617303666"><i class="fa fa-googleplus"></i></a></li>
       </ul>     
       </div>                                                     <!-- /landing-social -->         
 
